--- a/www.nass.gov.ng/2cc4b7367015853fc0196ef3ef02f84ccfd5ccd5.yml
+++ b/www.nass.gov.ng/2cc4b7367015853fc0196ef3ef02f84ccfd5ccd5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 02:36:13 GMT
+    - Tue, 21 Aug 2018 21:41:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Zq%2CXPnJLr%2Cfo6bssg1gn13; path=/
+    - PHPSESSID=R48ARHgeI8UQy5FWHcFGa2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 02:36:13 GMT
+recorded_at: Tue, 21 Aug 2018 21:41:34 GMT
