--- a/www.nass.gov.ng/3e060fc4c2bed1034d20a73932323b90dc28f477.yml
+++ b/www.nass.gov.ng/3e060fc4c2bed1034d20a73932323b90dc28f477.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 03:13:29 GMT
+    - Tue, 21 Aug 2018 22:15:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=X-5990U64oD2hV1V3oRjR3; path=/
+    - PHPSESSID=IaOXBgn%2CyfAjBM1LsIRAK3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 03:13:29 GMT
+recorded_at: Tue, 21 Aug 2018 22:15:00 GMT
