--- a/www.nass.gov.ng/a639d603e777bd8b6bf63d2d1fe29d34e5f8fefc.yml
+++ b/www.nass.gov.ng/a639d603e777bd8b6bf63d2d1fe29d34e5f8fefc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 03:14:18 GMT
+    - Tue, 21 Aug 2018 22:16:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iChTWqjg4BPsTCuZzvd2Y0; path=/
+    - PHPSESSID=%2CIn%2CEHDtHCuK55sOj29SX1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 03:14:18 GMT
+recorded_at: Tue, 21 Aug 2018 22:16:24 GMT
