--- a/www.nass.gov.ng/ac2a0384f80d7007e59e5450883b369a77c340b1.yml
+++ b/www.nass.gov.ng/ac2a0384f80d7007e59e5450883b369a77c340b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 03:15:57 GMT
+    - Tue, 21 Aug 2018 22:18:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hmjLJrbrBuwEGVnqU0c%2CG2; path=/
+    - PHPSESSID=kioyD8uOzug1-wYa14IwR3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 03:15:57 GMT
+recorded_at: Tue, 21 Aug 2018 22:18:43 GMT
