--- a/www.nass.gov.ng/44a7259ca7ebacecf6079574427f795d2a4d8b5c.yml
+++ b/www.nass.gov.ng/44a7259ca7ebacecf6079574427f795d2a4d8b5c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 03:20:54 GMT
+    - Tue, 21 Aug 2018 22:23:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=o87%2CewkOw74M5FryyM6z-2; path=/
+    - PHPSESSID=LpAbwiuWvENXjXWoRP6c02; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 03:20:54 GMT
+recorded_at: Tue, 21 Aug 2018 22:23:38 GMT
