--- a/www.nass.gov.ng/e4dd0306b3ea756a0c99f4733aa482bb27545683.yml
+++ b/www.nass.gov.ng/e4dd0306b3ea756a0c99f4733aa482bb27545683.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 03:37:33 GMT
+    - Tue, 21 Aug 2018 22:39:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Qnpo94ZzBWAUznugShBff1; path=/
+    - PHPSESSID=0I2r0jYOrYyQQ%2CubZlmbP3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 03:37:33 GMT
+recorded_at: Tue, 21 Aug 2018 22:39:00 GMT
