--- a/www.nass.gov.ng/6e1078bf85a5048537c386a181a60ecc0603d0f6.yml
+++ b/www.nass.gov.ng/6e1078bf85a5048537c386a181a60ecc0603d0f6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 03:38:20 GMT
+    - Tue, 21 Aug 2018 22:39:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zXNjsDaBojO1%2CBUGEpmkp3; path=/
+    - PHPSESSID=uFeQna6h0UAlIkmgxTGV83; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 03:38:20 GMT
+recorded_at: Tue, 21 Aug 2018 22:39:57 GMT
