--- a/www.nass.gov.ng/2a2e7bd2d9605cef54fb6bab2c3aeeb88571df9a.yml
+++ b/www.nass.gov.ng/2a2e7bd2d9605cef54fb6bab2c3aeeb88571df9a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 03:41:35 GMT
+    - Tue, 21 Aug 2018 22:44:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GlpITLEgtILM97Wr6MkVJ0; path=/
+    - PHPSESSID=kXN6i-lkOLQjBe%2CniOYkV3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 03:41:35 GMT
+recorded_at: Tue, 21 Aug 2018 22:44:16 GMT
