--- a/www.nass.gov.ng/1683933d6786e42cd88a216e30182eba1dfc6947.yml
+++ b/www.nass.gov.ng/1683933d6786e42cd88a216e30182eba1dfc6947.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 04:06:40 GMT
+    - Tue, 21 Aug 2018 23:08:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=w026F%2Corg8Z8aM0IRO-pK2; path=/
+    - PHPSESSID=GiOKqopf-xV8SfLXqtyhX1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 04:06:40 GMT
+recorded_at: Tue, 21 Aug 2018 23:08:30 GMT
