--- a/www.nass.gov.ng/640f5adc93a7527e2e8442f2f1134d63591250b7.yml
+++ b/www.nass.gov.ng/640f5adc93a7527e2e8442f2f1134d63591250b7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 04:12:32 GMT
+    - Tue, 21 Aug 2018 23:14:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YARyVVQ5IrrD1uR11S7nB1; path=/
+    - PHPSESSID=S-wNc3ND%2Cn6mKfjPSOoOP0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 04:12:33 GMT
+recorded_at: Tue, 21 Aug 2018 23:14:50 GMT
