--- a/www.nass.gov.ng/1b9f652047366eb61cfc88feed1e130cafc89fdd.yml
+++ b/www.nass.gov.ng/1b9f652047366eb61cfc88feed1e130cafc89fdd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 04:26:22 GMT
+    - Tue, 21 Aug 2018 23:25:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YzPfqVS0A1qecdO506u0f2; path=/
+    - PHPSESSID=mSBWX9tAo6cQv6osHCb%2CN3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 04:26:22 GMT
+recorded_at: Tue, 21 Aug 2018 23:25:56 GMT
