--- a/www.nass.gov.ng/2d0d3204851de5bc27578edb06f0c06ebabab249.yml
+++ b/www.nass.gov.ng/2d0d3204851de5bc27578edb06f0c06ebabab249.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 04:30:17 GMT
+    - Tue, 21 Aug 2018 23:29:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=l0Jip%2CXXWPJiTIxre%2CzxI2; path=/
+    - PHPSESSID=f%2CFl-6QwPxRDXeUZ3Nw0p1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 04:30:17 GMT
+recorded_at: Tue, 21 Aug 2018 23:29:06 GMT
