--- a/www.nass.gov.ng/ce792d7937513692282f4a41665c1550f979339f.yml
+++ b/www.nass.gov.ng/ce792d7937513692282f4a41665c1550f979339f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 05:16:07 GMT
+    - Wed, 22 Aug 2018 00:14:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6Vl70NkMiComjmeuJCwjO1; path=/
+    - PHPSESSID=dY-E6j3%2CvKI8B49kzzsJr2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 05:16:07 GMT
+recorded_at: Wed, 22 Aug 2018 00:14:15 GMT
