--- a/www.nass.gov.ng/fe73fac0099e810bc872ec11be2f117c155d7beb.yml
+++ b/www.nass.gov.ng/fe73fac0099e810bc872ec11be2f117c155d7beb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 05:19:09 GMT
+    - Wed, 22 Aug 2018 00:18:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sXAskCk3BOZDMGEaLjunn3; path=/
+    - PHPSESSID=AjBOd%2C%2CTGBuya%2CtcNyHTQ2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 05:19:09 GMT
+recorded_at: Wed, 22 Aug 2018 00:18:09 GMT
