--- a/www.nass.gov.ng/558d2e3c7e1cbf2b27608d872fbc23e30f7fce48.yml
+++ b/www.nass.gov.ng/558d2e3c7e1cbf2b27608d872fbc23e30f7fce48.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 05:20:01 GMT
+    - Wed, 22 Aug 2018 00:19:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7Mlnf6amrV%2CR3CDx714PT2; path=/
+    - PHPSESSID=bqu0dL2fX-e0C208rKQLY1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 05:20:02 GMT
+recorded_at: Wed, 22 Aug 2018 00:19:03 GMT
