--- a/www.nass.gov.ng/4e9e61694f8c7278e7538b5943ef908229329599.yml
+++ b/www.nass.gov.ng/4e9e61694f8c7278e7538b5943ef908229329599.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 05:21:41 GMT
+    - Wed, 22 Aug 2018 00:20:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2ARxpxvzEYF-y4ol7AoR41; path=/
+    - PHPSESSID=Auk-WO4v%2CPrjxDVM5NB7-1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 05:21:41 GMT
+recorded_at: Wed, 22 Aug 2018 00:20:53 GMT
